--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-share": "^5.1.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
