--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.8",
     "@clerk/nextjs": "^6.9.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
@@ -16,6 +17,7 @@
     "framer-motion": "^11.14.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "openai": "^4.76.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-spinners": "^0.15.0",
