--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^1.0.8",
     "@clerk/nextjs": "^6.9.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.1",
